# Offpunk History

## 2.6 - Unreleased
FOR PACKAGERS: dependency to python-pil (or pillow) has been dropped
- NEW BEHAVIOUR: externally opened ressources (like PDF) are now part of the history
- new "--command" command-line argument to immediately launch one or multiple commands
- new "feed" command to replace the "view feed" (which is deprecated)
- "url" now accepts link number as an argument (suggested by JMCS)
- "add" now accepts link number as a second argument (suggested by JMCS)
- removed support for chafa < 1.10, as announced in 2.4. python-pil is not used anymore. 
- "opnk" now supports following link like in "opnk $URL XX" where XX is a link number.
- new "preformat_wrap" option available to wrap even <pre>
- PlainText rendering has been vastly improved with wrap, margin and link detection
- fix wrong wraping in gophermap (patch by JMCS)
- "handler" with now automatically add "%s" at the end of the command if not present

## 2.5 - January 30th 2025
- "abbrevs" has been replaced by "alias"
- "alias" now allows custom command to be aliased
- PEP8-ification by Vincent Jousse
- changing "datetime.UTC" to "datetime.timezone.utc" for retrocompatibility with python < 3.11
- checking if "grep" supports "--color=auto" to supports OpenBSD (reported by Dylan D’Silva)

## 2.4 - November 21st 2024
NEW WEBSITE: Official homepage is now https://offpunk.net (or gemini://offpunk.net). Sources are in the /tutorial/ folder and contributions are welcome.
NEW FEATURE: This release includes work by Bert Livens to add gemini client-side certificates (see "help certs"). This means you can browse gemini capsule while being identified (such as astrobotany)
- Deprecation warning if using Chafa < 1.10
- introducing the "tutorial" command (which is only a link to offpunk.net for now)
- netcache: use client-certificate when going to a url like gemini://username@site.net (by Bert Livens)
- offpunk/netcache: added the "cert" command to list and create client certificates (Bert Livens)